--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <h1>Meine Aufgaben</h1>
         <div class="aufgaben-container">
-          <div class="aufgabe" onclick="showPopup()">
+          <div class="aufgabe" id="aufgabe1">
             <div class="symbol-title">
               <img src="images/first-aid-kit.png" alt="first-aid-kit" />
               <p class="title">Erste-Hilfe-Maßnahmen</p>
@@ -47,7 +47,7 @@
               Schulung in grundlegenden Erste-Hilfe-Techniken.
             </p>
           </div>
-          <div class="aufgabe" onclick="showPopup()">
+          <div class="aufgabe" id="aufgabe2">
             <div class="symbol-title">
               <img src="images/inspection.png" alt="inspection" />
               <p class="title">Sicherheitsinspektion durchführen</p>
@@ -57,7 +57,7 @@
               Einhaltung von Sicherheitsstandards.
             </p>
           </div>
-          <div class="aufgabe" onclick="showPopup()">
+          <div class="aufgabe" id="aufgabe3">
             <div class="symbol-title">
               <img src="images/fire-extinguisher.png" alt="fire-extinguisher" />
               <p class="title">Notfallübungen</p>
@@ -67,7 +67,7 @@
               Evakuierungspläne
             </p>
           </div>
-          <div class="aufgabe" onclick="showPopup()">
+          <div class="aufgabe" id="aufgabe4">
             <div class="symbol-title">
               <img src="images/foreman.png" alt="man wearing a helmet" />
               <p class="title">Persönlicher Schutzausrüstungn tragen</p>
@@ -77,7 +77,7 @@
               Verletzungen zu vermeiden.
             </p>
           </div>
-          <div class="aufgabe" onclick="showPopup()">
+          <div class="aufgabe" id="aufgabe5">
             <div class="symbol-title">
               <img src="images/warning.png" alt="warning schield" />
               <p class="title">Gefahre und Vorfälle melden</p>
@@ -87,7 +87,7 @@
               Zwischenfällen an Vorgesetzte oder die Sicherheitsabteilung.
             </p>
           </div>
-          <div class="aufgabe" onclick="showPopup()">
+          <div class="aufgabe" id="aufgabe6">
             <div class="symbol-title">
               <img src="images/tools.png" alt="Tools" />
               <p class="title">Wartung von Werkzeugen und Geräten</p>
@@ -97,7 +97,7 @@
               funktionsfähig sind.
             </p>
           </div>
-          <div class="aufgabe" onclick="showPopup()">
+          <div class="aufgabe" id="aufgabe7">
             <div class="symbol-title">
               <img src="images/gloves.png" alt="Sichertshandschuhe" />
               <p class="title">Umgang mit Chemikalien</p>
@@ -108,7 +108,7 @@
               zu vermeiden.
             </p>
           </div>
-          <div class="aufgabe" onclick="showPopup()">
+          <div class="aufgabe" id="aufgabe8">
             <div class="symbol-title">
               <img src="images/biological-hazard.png" alt="Atemschutzgerät" />
               <p class="title">Atemschutzgerät tragen</p>
